--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kfb",
-  "homepage": "https://8manrocks.github.io/kfb/",
+  "homepage": "https://kanchanfoods.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
